# clex

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.273EA94BF1A68A27.idx
include/: bpe.h
src/: bpe.cpp  cli.cpp  io.cpp  main.cpp
